--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,46 @@
-.App {
+.container {
+  border-radius: 4px;
+  display: block;
+  padding: 4px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  transition: border .2s ease-in-out;
+}
+
+.search {
+  width: 365px;
+  margin: 100px auto;
+  border-radius: 17px;
+  -webkit-border-radius: 17px;
+  -moz-border-radius: 17px;
+  border: 0;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid rgba(255,255,255,.8);
+  font-size: 16px;
+  margin: 4px;
+  padding: 5px;
+  width: 250px;
   text-align: center;
 }
 
-input {
-  margin-top: 20px;
-  font-family: impact;
+.avatar {
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+   max-width: 300px;
+   margin: auto;
+   text-align: center;
+   margin-bottom: 20px;
+}
+
+.title {
+    color: grey;
+    font-size: 18px;
 }
